--- a/backend/package.json
+++ b/backend/package.json
@@ -21,9 +21,12 @@
     "joi": "^17.6.2",
     "joi-password-complexity": "^5.1.0",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
+    "sequelize": "^6.25.3",
+    "sequelize-bcrypt": "^1.2.0",
     "uuidv4": "^6.2.13"
   }
 }
