--- a/backend/package.json
+++ b/backend/package.json
@@ -32,11 +32,14 @@
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
+    "pg": "^8.8.0",
     "sequelize": "^6.25.3",
     "sequelize-bcrypt": "^1.2.0",
     "uuidv4": "^6.2.13"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
+    "jest": "^29.3.1",
     "supertest": "^6.3.1"
   }
 }
